--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </style>
 
 <head>
-    <title>Matyáš Strelec | mstrlc.eu</title>
+    <title>Yuvraj Devnani | mstrlc.eu</title>
     <link rel="icon" type="image/png" href="favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
