--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="row">
             <div class="columnLeft">
                 <img id="photo" src="photo.jpeg" alt="Photo of me">
+                <h1>YUVRAJ DEVNANI</h1>
                 <!--skills  -->
                 <h1>Skills</h1>
                 <p class="para-size">
